<resources>
    <string name="app_name">DemoAppLock</string>
    <string name="layout_start_1">Lock Screen</string>
    <string name="layout_start_2">Setting for your device</string>
    <string name="layout_start_3">Find \"lock screen\" and active</string>
    <string name="layout_start_4">Allow Lock Screen to work  on your device</string>
    <string name="layout_start_5">Got it</string>
    <string name="dialog_enable_lockscreen_1">Find and enable lockscreen</string>
    <string name="dialog_enable_lockscreen_2">[lockscreen]</string>
    <string name="dialog_enable_lockscreen_3">Tap on the top right hand toggle to enable CMLocker</string>
    <string name="dialog_enable_lockscreen_4">Attention: You may receive standard privacy warnings. There no need  to worry, no personal data will be collected</string>
    <string name="setting_text_1">Enable Lock</string>
    <string name="addPhoto">Setting LockScreen</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="setrect_question">Change pin preventive</string>
    <string name="sounds">Sounds</string>
    <string name="item_sounds">Sounds</string>
    <string name="vibiration">Vibiration</string>
    <string name="refesh_24h">Use 24 hours format</string>
    <string name="question_1">Tên con vật bạn yêu nhất ?</string>
    <string name="question_2">Tên bộ phim bạn thích nhát</string>
    <string name="question_3">Tên thành phố bạn sinh ra</string>
    <string name="notity">Show notification</string>
    <string name="normal_demo">test</string>
    <string name="enter_pin">Nhập mã pin</string>
    <string name="cancel">Cane</string>
    <string name="instructions">123</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txt_view_onlock"><![CDATA[> Swipe to unlock]]></string>
    <string name="txt_forget_pass"><u>Mã dự phòng</u></string>
    <string name="lb_txt_noti">Thông báo</string>
    <string name="lb_text_noti">Thông báo</string>
</resources>
